--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -36,8 +36,10 @@ html(lang="vi")
     script(src="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.js")
     script(src="https://cdn.jsdelivr.net/npm/just-validate@4.3.0/dist/just-validate.production.min.js")
     script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
-    script(src="/assets/js/map.js")
+    //script(src="/assets/js/map.js")
+    //script(src="/assets/js/map_canhbao.js")
     script(src="/assets/js/script.js")
 
+    block scripts
 
 
