--- a/views/client/pages/index.pug
+++ b/views/client/pages/index.pug
@@ -4,7 +4,7 @@ block content
   .section-1
     #map
       .info-table
-        .info-header Thông tin hiển thị cảnh báo mức thứ 3
+        .info-header Thông tin phân vùng trọng điểm mức 3
 
         // Layer control
         .layer-control
@@ -72,5 +72,8 @@ block content
               td(colspan="4" style="text-align:center") Không có dữ liệu
 
               //- td #{item.phancap}
+block scripts
+  script(src="/assets/js/map.js")
+
 
 
