--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -33,11 +33,15 @@ header.header
       nav.inner-menu
         ul
           li
-            a.active(href="/") Trang chủ
+            a.header-item(href="/") Trang chủ
           li
-            a(href="/about-us") Giới thiêu
+            a.header-item(href="/bandocanhbao") Bản đồ cảnh báo
           li
-            a(href="/contact") Liên hệ
+            a.header-item(href="/bandogiamsat") Bản đồ giám sát
+          li
+            a.header-item(href="/about-us") Giới thiêu
+          li
+            a.header-item(href="/contact") Liên hệ
         .inner-overlay
       // 
       .inner-button
