--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -460,6 +460,7 @@ header {
 .footer .inner-bottom {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .footer .inner-bottom .inner-logo {
@@ -882,10 +883,12 @@ header {
   font-size: 12px;
   color: #aaa;
 }
+
 /* Pagination (section-7) */
 .section-7 {
   display: flex;
-  justify-content: center; /* căn giữa */
+  justify-content: center;
+  /* căn giữa */
   align-items: center;
   gap: 12px;
   margin-top: 25px;
@@ -955,7 +958,8 @@ header {
 }
 
 /* Map */
-#map {
+#map,
+#map_canh_bao {
   height: 93vh;
   width: 100%;
   border-radius: 8px;
