--- a/views/admin/pages/dulieuSRT-list.pug
+++ b/views/admin/pages/dulieuSRT-list.pug
@@ -24,6 +24,14 @@ block main
           select(id="xa" name="xa" class="xa" filter-Ma_xa)
             option(value="") Xã
             +optionXa(ListXaTheoHuyen)  
+        .inner-item
+          select(filter-muc_ah) 
+            option(value="") Mức ảnh hưởng
+            option(value="0") 0
+            option(value="25") 25
+            option(value="50") 50
+            option(value="75") 75
+            option(value="100") 100
       .inner-item.inner-reset
         <i class="fa-solid fa-rotate-left" filter-reset></i> Xóa bộ lọc
   //- End Section 4
@@ -41,8 +49,8 @@ block main
       //- //- .inner-search
       //-   <i class="fa-solid fa-magnifying-glass"></i>
       //-   input(type="text" placeholder="Tìm kiếm" search)
-      .inner-button-create
-        a(href=`/${pathAdmin}/sauromthong/create`) + Tạo mới
+      //- .inner-button-create
+      //-   a(href=`/${pathAdmin}/sauromthong/create`) + Tạo mới
   //- End Section 5
 
   //- Section 6
@@ -51,9 +59,6 @@ block main
       table
         thead
           tr
-            th(class="inner-center")
-              input(type="checkbox" class="inner-check" check-all)
-            //- th Địa diểm điều tra
             th Tỉnh
             th(class="inner-center") Huyện
             th(class="inner-center") Xã
@@ -64,14 +69,13 @@ block main
             th Loại rừng
             th Năm trồng 
             th(class="inner-center") Chủ rừng
+            th Mức ảnh hưởng
+            th Số ngày phát dịch còn
             th Hành động
         tbody
         if listDulieuSRT.length
           each item in listDulieuSRT
-            tr
-              td(class="inner-center")
-                input(type="checkbox" class="inner-check" check-item=item.id)
-              //- td #{item.diadiem_dieutra}
+            tr 
               td #{item.tinh}
               td(class="inner-center") #{item.huyen}
               td(class="inner-center") #{item.xa}
@@ -82,12 +86,19 @@ block main
               td(class="inner-center") #{item.loairung}
               td(class="inner-center") #{item.namtr}
               td(class="inner-center") #{item.churung}
+              td(class="inner-center") #{item.muc_ah}
+              td(class="inner-center") #{item.so_ngay_con_lai}
               td
                 .inner-buttons
-                  a(href=`/${pathAdmin}/sauromthong/edit/${item.id}` class="inner-edit")
-                    i.fa-regular.fa-pen-to-square
-                  //- a(class="inner-delete" button-delete data-api=`/${pathAdmin}/category/delete/${item.id}`)
-                  //-   i.fa-regular.fa-trash-can
+                    a.inner-edit(href=`/admin/sauromthong/detail/${item.id}`)
+                      <i class="fa-solid fa-eye"></i>
+                    a.inner-map(
+                      href=`/bancanhbao?bando="cb_srt_map"&xa=${item.xa}&tk=${item.tieukhu}&khoanh=${item.khoanh}&lo=${item.lo}`
+                      target="_blank"
+                      style ="color: inherit;"
+                    ) 
+                      i(class="fa-solid fa-map-location-dot") 
+
         else
           tr
             td(colspan="13" class="inner-center") Không có dữ liệu
