--- a/views/admin/pages/dulieuSRT-list.pug
+++ b/views/admin/pages/dulieuSRT-list.pug
@@ -93,7 +93,7 @@ block main
                     a.inner-edit(href=`/admin/sauromthong/detail/${item.id}`)
                       <i class="fa-solid fa-eye"></i>
                     a.inner-map(
-                      href=`/bancanhbao?bando="cb_srt_map"&xa=${item.xa}&tk=${item.tieukhu}&khoanh=${item.khoanh}&lo=${item.lo}`
+                      href=`/bandocanhbao?bando=cb_srt_map&xa=${item.xa}&tk=${item.tieukhu}&khoanh=${item.khoanh}&lo=${item.lo}`
                       target="_blank"
                       style ="color: inherit;"
                     ) 
