--- a/views/client/pages/bando-canhbao.pug
+++ b/views/client/pages/bando-canhbao.pug
@@ -4,7 +4,7 @@ block content
   .section-1
     #map_canh_bao
       .info-table
-        .info-header Thông tin cảnh báo mức độ theo vùng 
+        .info-header Thông tin cảnh báo mức ảnh hưởng theo vùng 
 
         // Layer control
         .layer-control(style="display:none")
