--- a/views/admin/pages/user-log.pug
+++ b/views/admin/pages/user-log.pug
@@ -52,7 +52,7 @@ block main
             //- th.inner-center
             //-   input(type="checkbox" class="inner-check" check-all)
             th.inner-center Người dùng
-            th.inner-center API
+            th.inner-center Hành động
             th.inner-center Phương thức
             th.inner-center Thời gian
             th.inner-center Mục đích
