--- a/views/admin/pages/dashboard.pug
+++ b/views/admin/pages/dashboard.pug
@@ -1,3 +1,4 @@
 extends ../layouts/default.pug
 block main
     h1.box-title Tổng quan về hệ thống cảnh báo
+    h3 Chức năng đang trong quá trình cập nhật
