--- a/views/admin/pages/dulieuSRT-list.pug
+++ b/views/admin/pages/dulieuSRT-list.pug
@@ -37,8 +37,8 @@ block main
   //- End Section 4
 
   //- Section 5
-  .section-5
-    .inner-wrap
+  //- .section-5
+  //-   .inner-wrap
       //- .inner-change-status(change-multi)
       //-   .inner-item
       //-     select
