--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -778,7 +778,11 @@ header {
   color: #fff;
   transform: translateY(-3px);
 }
-
+.topic-box:hover i{
+  font-size: 36px;
+  margin-bottom: 10px;
+  color: #fff;
+}
 /* Faq-page */
 /* FAQ Page */
 .faq-page {
