--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -143,7 +143,7 @@ nav.sider
     hr
 
     li
-      a(href=`/${pathAdmin}/profile/edit`)
+      a.dashboard(href=`/${pathAdmin}/profile/edit`)
         i.fa-solid.fa-user-gear
         |  Thông tin cá nhân
 
