--- a/views/client/pages/contact.pug
+++ b/views/client/pages/contact.pug
@@ -37,7 +37,7 @@ block content
             button(class="inner-button") GỬI ĐI
             //- 3 box danh mục
       .contact-topics
-        h3 Chọn chủ đề để xem câu hỏi
+        h3 CÁC CÂU HỎI THƯỜNG GẶP
         .topics-wrap
           a.topic-box(href="/faq/sau-rom-thong")
             i.fa-solid.fa-bug
