--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -573,6 +573,11 @@ header {
 
 /* Tuệ */
 /* about */
+
+.about-page {
+  padding-top: 80px;
+}
+
 .header-image {
   width: 100%;
   max-height: 400px;
@@ -604,9 +609,6 @@ header {
   margin-bottom: 25px;
   font-size: 14px;
 }
-
-
-
 
 
 .intro-text {
